tests/paczka1/fuzzy1/78477376.err
Error in line 1: QI1HMmQ4C S199 2,6
Error in line 4: VwErY S930 43,5
Error in line 10: QI1HMmQ4C S930 99,85
Error in line 3: QI1HMmQ4C A178 67,1
Error in line 19: eCp3momb S940 41,5
Error in line 28: QI1HMmQ4C S199 33,9
Error in line 36: A178 S199 65,1
